Fix alignment and add css link to misosoup.html

--- a/style.css
+++ b/style.css
@@ -20,3 +20,9 @@ ul {
     background-color: burlywood;
 
 }
+
+h1 {
+
+    text-align: center;
+
+}
